--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,27 @@
 spring:
-  profiles:
-    active: dev
+  application:
+    name: utile-professional
+  datasource:
+    url: jdbc:postgresql://localhost:5432/utile
+    username: postgres
+    password: root
+    driver-class-name: org.postgresql.Driver
+
+
 springdoc:
   swagger-ui:
+    show-extensions: true
+    show-common-extensions: true
+    path: /swagger-ui.html
+    disable-swagger-default-url: true
     enabled: true
-    path: /swagger-ui.html # http://localhost:8081/swagger-ui/index.html
+  api-docs:
+    path: /v3/api-docs
+    enabled: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+server:
+  port: 8099
