--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,6 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-
-
-
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -88,6 +85,18 @@
 			<artifactId>spring-cloud-commons</artifactId>
 			<version>4.1.4</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>10.16.0</version>
 		</dependency>
 
 
